# cloudflare-access-webhook-redirect

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  codecov.yml  release-please-config.json  renovate.json
.github/workflows/: action-lint.yaml  audit.yaml  automerge.yaml  build.yaml  build.yml  docker-image.yaml  docker-image.yml  release-please.yaml  renovate-config.yaml  sentry.yaml  sentry.yml
src/: config.rs  converter.rs  error.rs  lib.rs  main.rs  server.rs
src/data/: mod.rs  webhook.rs
src/routes/: health_check.rs  mod.rs  redirect.rs
