[package]
name = "cloudflare-access-webhook-redirect"
version = "0.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cloudflare-access-webhook-redirect"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
thiserror = "2.0.0"
backtrace = "0.3.73"
actix-web = "4.9.0"
tracing-actix-web = "0.7.12"
config = "0.14.0"
serde = "1.0.209"
serde_json = "1.0.108"
reqwest = "0.12.7"
reqwest-middleware = "0.3.3"
reqwest-tracing = "0.5.3"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
secrecy = { version = "0.8.0", features = ["serde"] }
regex = "1.10.6"
getset = "0.1.2"
derive-new = "0.7.0"
sentry = { version = "0.34.0", features = ["anyhow", "debug-images", "reqwest", "backtrace"] }

[dev-dependencies]
http = "1.1.0"
temp-env = "0.3.6"
serde_test = "1.0.177"
lazy_static = "1.5.0"
wiremock = "0.6.1"

[profile.release]
lto = true
codegen-units = 1
debug = true