[package]
name = "cloudflare-access-webhook-redirect"
version = "0.3.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cloudflare-access-webhook-redirect"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
thiserror = "2.0.17"
actix-web = "4.12.1"
tracing-actix-web = "0.7.19"
config = "0.15.18"
serde = "1.0.209"
serde_json = "1.0.145"
reqwest = "0.12.24"
reqwest-middleware = "0.4.2"
reqwest-tracing = "0.5.8"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
secrecy = { version = "0.10.3", features = ["serde"] }
regex = "1.12.2"
sentry = { version = "0.46.0", features = ["anyhow", "debug-images", "reqwest", "backtrace"] }

[dev-dependencies]
http = "1.4.0"
temp-env = "0.3.6"
lazy_static = "1.5.0"
wiremock = "0.6.5"

[profile.release]
lto = true
codegen-units = 1